fixed some overflow-issues on home

--- a/less/home.less
+++ b/less/home.less
@@ -84,15 +84,12 @@
       }
 
       .post-preview {
+        overflow: hidden;
         margin-top: 10px;
-        padding-top: 10px;
+        padding: 10px 0;
         border-top: 1px dashed fade(white, 20);
         &:last-child {
-          margin-bottom: -15px;
-
-          span {
-            margin-bottom: 5px;
-          }
+          padding-bottom: 0;
         }
 
         img.user-img {
@@ -102,14 +99,13 @@
         }
 
         p {
+          margin: 0;
           max-height: 80px;
-          overflow: hidden;
           float: left;
           clear: left;
 
           img {
             max-width: 100%;
-            max-height: 100%;
           }
         }
 
